<resources>
    <string name="app_name">Habit</string>
    <string name="name">Name</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="quantity">Quantity</string>
    <string name="period">Period</string>
    <string name="description">Description</string>
    <string name="period_prefix"> time(s) in: </string>
    <string name="priority_header">Priority:</string>
    <string name="two">2</string>
    <string name="selected_color_header">Selected color:</string>
    <string name="RGB">RGB:</string>
    <string name="HSV">HSV:</string>
    <string name="rgb_formatted">R:%d G:%d B:%d</string>
    <string name="hsv_formatted">H:%f S:%f V:%f</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="search_and_filtration">Search and filter</string>
    <string name="sort_order">Priority order:</string>
    <string name="straight">1–9</string>
    <string name="reverse">9–1</string>
    <string name="find">Find</string>


    <string name="token">035c58f1-83a3-4ac6-8468-6f9fe1e7e09e</string>
    <string name="base_url">https://droid-test-server.doubletapp.ru/api/</string>

    <string name="image_url">https://sun9-47.userapi.com/c629421/v629421486/ff54/jNCCXh3VXmk.jpg?ava=1</string>


    <string-array name="priority_list">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
