<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.MainActivity">

    <LinearLayout
        android:layout_margin="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginBottom="8dp"
            app:backgroundTint="@color/grey"
            android:inputType="textCapWords"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_marginBottom="8dp"
            app:backgroundTint="@color/grey"
            android:inputType="textCapWords"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/priority_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:entries="@array/priority_list"
            android:textColor="@color/black"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/good_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/good"/>

            <RadioButton
                android:id="@+id/bad_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:text="@string/bad"/>

        </RadioGroup>

        <EditText
            android:id="@+id/quantity_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            app:backgroundTint="@color/grey"
            android:layout_marginBottom="8dp"
            android:inputType="number"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/period_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/period"
            app:backgroundTint="@color/grey"
            android:inputType="number"
            android:textColor="@color/black"/>

    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/grey"
        app:tint="@color/colorWhite"
        app:rippleColor="@color/colorWhite"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_action_done"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
