<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/type"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/like"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toRightOf="@id/type"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="16dp"
                            android:text="@string/name"/>

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/grey"
                            android:textSize="14dp"
                            android:text="@string/description"/>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/quantity"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/period_prefix"
                                    android:textSize="14dp"
                                    android:textStyle="bold"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"/>

                                <TextView
                                    android:id="@+id/period_prefix"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:text="@string/period_prefix"
                                    android:textSize="14dp"
                                    app:layout_constraintLeft_toRightOf="@id/quantity"
                                    app:layout_constraintTop_toTopOf="parent"/>

                                <TextView
                                    android:id="@+id/period"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:text="@string/two"
                                    android:textSize="14dp"
                                    app:layout_constraintLeft_toRightOf="@id/period_prefix"
                                    app:layout_constraintTop_toTopOf="parent"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="14dp"
                            android:text="@string/priority_header"/>

                        <TextView
                            android:id="@+id/priority"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:text="@string/two"/>


                </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>





</LinearLayout>
